--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ts-jest": "^29.1.1"
   },
   "dependencies": {
-    "i": "^0.3.7"
+    "i": "^0.3.7",
+    "uuid": "^11.0.3"
   },
   "jest": {
     "transform": {
