--- a/.github/workflows/Test_JS.yml
+++ b/.github/workflows/Test_JS.yml
@@ -32,3 +32,9 @@ jobs:
 
       - name: Generate documentation
         run: npm run generate-docs
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
